--- a/html/index.html
+++ b/html/index.html
@@ -38,10 +38,10 @@
                 <p>Qualquer coisa</p>
                 <br>
                 <div class="redes-sociais">
-                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                    <a href="#"><i class="fa-brands fa-github"></i></a>
-                    <a href="#"><i class="fa-regular fa-envelope"></i></a>
-                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="https://www.linkedin.com/in/daniel-serati-b238792b0/"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="https://github.com/DanielSerati"><i class="fa-brands fa-github"></i></a>
+                    <a href="%"><i class="fa-regular fa-envelope"></i></a>
+                    <a href="https://www.instagram.com/danielserati1/"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-whatsapp"></i></a>
                 </div>
                 <button class="b2">Sobre Mim</button>
